app/assets/stylesheets/newflow_layout.scss
@import "pattern-library";
@import "font-awesome";
@import "newflow_colors";

html {
    font-family: 'Helvetica Neue';
}

body {
    @include width-up-to($phone-max) {
        .content {
            padding-left: 0;
            padding-right: 0;
        }
    }

    background-color: #fff;
    color: var(--greyish-brown);
}

.banner {
    background-color: #d9edf7;
    padding: 1rem;
    padding-left: 2rem;
    border-bottom: 0.1rem solid #bce8f1;
    color: #31708f;
}

// utility classes
.hidden {
    display: none !important;
}

.form-divider {
    text-align: center;
    position: relative;

    &:after {
        border-top: 0.1rem solid #d5d5d5;
        content: '';
        display: block;
        width: calc(50% - 7rem);
        right: 0px;
        position: absolute;
        top: 50%;
    }

    &:before {
        border-top: 0.1rem solid #d5d5d5;
        content: '';
        display: block;
        width: calc(50% - 7rem);
        left: 0px;
        position: absolute;
        top: 50%;
    }
}

// Add a star * to form fields that are required
label.required::after {
    content: " *";
}

// Show/hide password link
#password-field-container {
    position: relative;

    #show-hide-button {
        position: absolute;
        top: 50%;
        right: 1.8rem;
        transform: translateY(-50%);
        line-height: 100%;

        color: #027EB5;
        font-weight: bold;
        cursor: pointer;

        @include wider-than($phone-max) {
            // more space to the right on desktop for users who use a password manager
            right: 3.2rem;
        }
    }
}

.main-menu {
    box-shadow: none;
    margin: 2rem 0 0 2rem;

    @include wider-than($phone-max) {
        height: 2rem;
    }

    .logo-wrapper {
        padding: 0;

         @include width-up-to($phone-max) {
            margin: auto;
        }
    }
}

.content form, form.content {
    background-color: white;
}

.step-counter {
    height: 3rem;
    border-left: 0.1rem solid #d5d5d5;
    border-right: 0.1rem solid #d5d5d5;
    padding: 1.5rem 0 0 1.5rem;

    @include wider-than($phone-max) {
        padding: 2.9rem 0 0 2.9rem;
    }

    > div {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 9.4rem;
        height: 100%;

        background-color: #f5f5f5;
        border-radius: 1.5rem;
    }

    span {
        @include title-font(1.4rem);
    }
}

#exit-icon {
    border-left: 0.1rem solid #d5d5d5;
    border-right: 0.1rem solid #d5d5d5;
    padding: 1.5rem 0 0 1.5rem;

    a {
        float: right;
        padding-right: 3rem;
        padding-top: 1rem;
        color: var(--greyish-brown);
    }
}

input.has-error {
    background-color: var(--input-error-background-color) !important;
    border: thin solid var(--input-error-border-color) !important;
}

.invalid-message {
    color: var(--input-error-message-color);
}

// per-page styles
.login-unsuccessful-page {
    a {
        text-decoration: none;
    }

    #send-instructions-button {
        padding: 0px 10.5rem;
        border: 0;
        color: #fff;
        font-weight: bold;
        background-color: #f36b32;


    }

    #return-button {
        background-color: #fff;
    }
}
/* ... */

